--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/wecarrasco/expensesBackend#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "hapi": "^17.5.4",
     "hapi-postgres-connection": "^6.5.1",
     "pg": "^7.4.3",
